@@ -15,7 +15,6 @@ import org.mockito.junit.jupiter.MockitoExtension;
 
 import com.nhnacademy.back.product.state.domain.entity.ProductState;
 import com.nhnacademy.back.product.state.domain.entity.ProductStateName;
-import com.nhnacademy.back.product.state.exception.ProductStateNotFoundException;
 import com.nhnacademy.back.product.state.repository.ProductStateJpaRepository;
 import com.nhnacademy.back.product.state.service.impl.ProductStateServiceImpl;
 
@@ -33,14 +32,16 @@ class ProductStateServiceTest {
 	void getProductStates_success() {
 		// given
 		ProductState state = new ProductState(1L, ProductStateName.SALE);
-		given(productStateJpaRepository.findAll()).willReturn(List.of(state));
+		ProductState state2 = new ProductState(ProductStateName.OUT);
+		given(productStateJpaRepository.findAll()).willReturn(List.of(state, state2));
 
 		// when
 		List<ProductState> result = productStateService.getProductStates();
 
 		// then
-		assertThat(result).hasSize(1);
-		assertThat(result.get(0).getProductStateName()).isEqualTo(ProductStateName.SALE);
+		assertThat(result).hasSize(2);
+		assertThat(result.getFirst().getProductStateName()).isEqualTo(ProductStateName.SALE);
+		assertThat(result.get(1).getProductStateName()).isEqualTo(ProductStateName.OUT);
 	}
 
 	@Test
@@ -56,19 +57,4 @@ class ProductStateServiceTest {
 		assertThat(result).isEmpty();
 	}
 
-	@Test
-	@DisplayName("존재하지 않는 상태명 조회 - 예외 발생")
-	void findByProductStateName_notFound() {
-		// given
-		given(productStateJpaRepository.findByProductStateName(ProductStateName.DELETE)).willReturn(null);
-
-		// when & then
-		assertThatThrownBy(() -> {
-			ProductState state = productStateJpaRepository.findByProductStateName(ProductStateName.DELETE);
-			if (state == null) {
-				throw new ProductStateNotFoundException("해당 상태가 존재하지 않습니다.");
-			}
-		}).isInstanceOf(ProductStateNotFoundException.class)
-			.hasMessageContaining("해당 상태가 존재하지 않습니다.");
-	}
 }
